# perplexity-web-wrapper-mcp

./: .gitignore  CLAUDE.md  README.md  cli.py  mcp_server.py  pyproject.toml
api/: main.py  utils.py
lib/: auth.py  perplexity.py
